# StockFilo

./: .cspell.json  .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  stockfolio-linux-build  stockfolio-linux-dev  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/agents/: watchlist-expert.agent.md
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  watchlists-backup-2026-04-28.json  watchlists-backup-2026-04-29.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  yahoo.rs
src-tauri/src/commands/: browser.rs  config.rs  db_portfolios.rs  db_purchases.rs  db_stocks.rs  db_watchlists.rs  mod.rs  portfolio.rs  stocks.rs  sync.rs
src-tauri/src/db/: manager.rs  migrations.rs  mod.rs  models.rs
src/components/analysis/: AnalysisView.tsx  MountainChart.tsx  TickerNews.tsx
src/components/dashboard/: Dashboard.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/portfolio/: PortfolioRankView.tsx  PortfolioView.tsx  PurchaseDialog.tsx  PurchasesTable.tsx
src/components/settings/: SettingsPanel.tsx  StorageSettings.tsx
src/components/shared/: AppLogoMark.tsx  ExtendedHoursTag.tsx  TickerLogo.tsx
src/components/watchlist/: SparkLine.tsx  StockCompareModal.tsx  StockDetailModal.tsx  WatchList.tsx
src/hooks/: useFavorites.ts  useInfoTooltips.ts  useInvestorMode.ts  useLinkOpenMode.ts  usePortfolio.ts  usePortfolios.ts  useTheme.ts  useWatchlist.ts  useWatchlistNotes.ts  useWatchlistTargets.ts  useWatchlists.ts
src/lib/: db.ts  openUrl.ts  utils.ts
src/types/: index.ts
