[package]
name = "stockfolio"
version = "0.1.0"
edition = "2021"

[lib]
name = "stockfolio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls", "cookies"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
urlencoding = "2"
rss = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
